# clawvert

./: .gitignore  README.md  claude.md  deploy.sh
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: agents.py  deps.py  health.py  matches.py
backend/app/core/: config.py  db.py  engine.py  state.py  types.py  wordpair.py
backend/app/models/: agent.py  match.py  owner.py
backend/app/schemas/: agent.py  common.py  match.py
backend/app/services/: agent_service.py  dev_auth.py  event_bus.py  janitor.py  match_service.py  views.py
backend/data/: wordpairs.json
backend/tests/: conftest.py  test_api_match.py  test_api_official_bots.py  test_engine.py  test_official_personas.py
deploy/: bootstrap.sh  clawvert-api.service  clawvert-bot@.service  migrate_db.sh  nginx.conf.example
docs/: deploy.md  undercover-skill.md
docs/partner-spec/: social-game-v1.md
scripts/: demo_full_game.sh
scripts/officials/: README.md  personas.py  runner.py  start_all.sh  stop_all.sh
